<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.nokor.frmk</groupId>
    <artifactId>nkr-frmk-vaadin-components</artifactId>
    <packaging>jar</packaging>
    <name>Nokor Framework Vaadin Components</name>
    <description>Nokor Framework Vaadin Components</description>
    <version>1.7.1</version>

	<parent>
		<groupId>com.nokor.frmk</groupId>
		<artifactId>nkr-frmk-parent</artifactId>
		<version>1.7.1</version>
	</parent>
	
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <vaadin.version>7.3.3</vaadin.version>
        <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
        <vaadin.addon.confirmdialog.version>2.1.1</vaadin.addon.confirmdialog.version>
		<vaadin.addon.googlemaps.version>0.8.1</vaadin.addon.googlemaps.version>
        <spring-vaadin-integration.version>3.1</spring-vaadin-integration.version>

		<gwt.version>2.6.1</gwt.version>
        <gwt.plugin.version>${gwt.version}</gwt.plugin.version>
		<gwt-upload.version>1.0.1</gwt-upload.version>
    </properties>

  
    <repositories>
		<repository>
			<id>vaadin-addons</id>
			<url>http://maven.vaadin.com/vaadin-addons</url>
		</repository>
		<repository>
			<id>google-gson</id>
			<url>http://code.google.com/p/google-gson</url>
		</repository>
		
	</repositories>

    <pluginRepositories/>

    <profiles/>

	
    <dependencies>
		<dependency>
		  	<groupId>com.nokor.frmk</groupId>
    		<artifactId>nkr-frmk-services</artifactId>
		 </dependency>

		 <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>vaadin-server</artifactId>
        </dependency>

		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-server</artifactId>
			<version>${vaadin.version}</version>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-server</artifactId>
			<version>${vaadin.version}</version>
			<classifier>sources</classifier>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-client-compiled</artifactId>
			<version>${vaadin.version}</version>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-client</artifactId>
			<version>${vaadin.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-themes</artifactId>
			<version>${vaadin.version}</version>
		</dependency>
		<dependency>
		   <groupId>org.vaadin.addon</groupId>
		   <artifactId>confirmdialog</artifactId>
		   <version>${vaadin.addon.confirmdialog.version}</version>
		</dependency>
		<dependency>
		   <groupId>ru.xpoft.vaadin</groupId>
		   <artifactId>spring-vaadin-integration</artifactId>
		   <version>${spring-vaadin-integration.version}</version>
		</dependency>
		<dependency>
   			<groupId>com.vaadin.tapio</groupId>
   			<artifactId>googlemaps</artifactId>
   			<version>${vaadin.addon.googlemaps.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.google.gwt</groupId>
					<artifactId>gwt-user</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwt.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-servlet</artifactId>
			<version>${gwt.version}</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.gwtupload</groupId>
			<artifactId>gwtupload</artifactId>
			<version>${gwt-upload.version}</version>
		</dependency>
		
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jibx</groupId>
			<artifactId>jibx-run</artifactId>
		</dependency>
		<dependency>
		  	<groupId>org.jibx</groupId>
		  	<artifactId>jibx-extras</artifactId>
		</dependency>

        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <scope>provided</scope>
        </dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
			
    </dependencies>

    <build>
        <plugins>
			<plugin>
	        	<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				 <configuration>
					 <source>1.7</source>
					 <target>1.7</target>
					 <encoding>UTF-8</encoding>
        		</configuration>
			</plugin>
			<!--<plugin>
	        	<groupId>org.apache.maven.plugins</groupId>
	        	<artifactId>maven-source-plugin</artifactId>
	        	<version>2.2.1</version>
	        	<executions>
              		<execution>
                		<id>attach-sources</id>
                		<goals>
                  			<goal>jar</goal>
                		</goals>
              		</execution>
            	</executions>
	      	</plugin>-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>
			
			 <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.3.1</version>
                <configuration>
                    <archive>
                        <index>true</index>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                        <manifestEntries>
                            
                            <Vaadin-Package-Version>1</Vaadin-Package-Version>
                            <Vaadin-License-Title>Apache License 2.0</Vaadin-License-Title>
                            <Vaadin-Widgetsets>com.nokor.frmk.vaadin.ui.widget.component.WidgetSet</Vaadin-Widgetsets>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>2.4.1</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>${basedir}/target/tmp/resources/VAADIN/widgetsets</directory>
                        </fileset>
                        <fileset>
                            <directory>${basedir}/target/tmp/resources/VAADIN/gwt-unitCache</directory>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-maven-plugin</artifactId>
                <version>${vaadin.plugin.version}</version>
				
				<dependencies>
					<dependency>
						<groupId>com.vaadin</groupId>
						<artifactId>vaadin-client-compiler</artifactId>
						<version>${vaadin.plugin.version}</version>
					</dependency>
				</dependencies>

                <configuration>
                    <extraJvmArgs>-Xmx1536M -Xss2048k -XX:MaxPermSize=512M</extraJvmArgs>
                    <webappDirectory>${basedir}/target/tmp/resources/VAADIN/widgetsets</webappDirectory>
                    <hostedWebapp>${basedir}/target/tmp/resources/VAADIN/widgetsets</hostedWebapp>
                    <noServer>true</noServer>
                    <persistentunitcachedir>${basedir}/target/tmp/gwt-unitCache</persistentunitcachedir>
                    <compileReport>true</compileReport>
                    <strict>true</strict>
                    <runTarget>http://localhost:8080/</runTarget>
                </configuration>
                <executions>
                    <execution>
                        <configuration>
                        </configuration>
                        <goals>
                            <goal>update-widgetset</goal>
                            <goal>compile</goal>
                            <goal>resources</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        
            <plugin>
                <groupId>org.eclipse.m2e</groupId>
                <artifactId>lifecycle-mapping</artifactId>
                <version>1.0.0</version>
                <configuration>
                    <lifecycleMappingMetadata>
                        <pluginExecutions>
                            <pluginExecution>
                                <pluginExecutionFilter>
                                    <groupId>com.vaadin</groupId>
                                    <artifactId>vaadin-maven-plugin</artifactId>
                                    <versionRange>
                                        [${vaadin.plugin.version},)
                                    </versionRange>
                                    <goals>
                                        <goal>update-widgetset</goal>
                                        <goal>compile</goal>
                                        <goal>resources</goal>
        
                                    </goals>
                                </pluginExecutionFilter>
                                <action>
                                    <ignore></ignore>
                                </action>
                            </pluginExecution>
                        </pluginExecutions>
                    </lifecycleMappingMetadata>
                </configuration>
            </plugin>
             
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.4</version>
            </plugin>
			
        </plugins>
		
        <pluginManagement/>
		
		<resources>
            <resource>
                <directory>target/tmp/resources</directory>
            </resource>
        </resources>
		
    </build>

  
</project>
